--- a/publications.html
+++ b/publications.html
@@ -192,6 +192,16 @@
 
 <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-168677080-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-168677080-1');
+</script>
+
 </head>
 <body>
 </body>
@@ -502,8 +512,8 @@ $('.title').remove()
 <div id="publications" class="section level2">
 <h2><strong>Publications</strong></h2>
 <hr>
-<div id="in-review" class="section level3">
-<h3>In review</h3>
+<div id="in-press" class="section level3">
+<h3>In press</h3>
 <p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Continental assessment of species- and life history-related variation and correlates of bird-building collisions in North America. Conservation Biology.</p>
 <p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere.</p>
 </div>
@@ -545,7 +555,7 @@ $('.title').remove()
 </div>
 <div id="section-6" class="section level3">
 <h3>2013</h3>
-<p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, and J.M. Coffman. 2013. Response of lizard community structure to desert grassland restoration mediated by a keystone rodent. Biodiversity and Conservation 22:921–935. <a href="documents/cosentino_biodivcons_2013.pdf">PDF</a></p>
+<p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, and J.M. Coffman. 2013. Response of lizard community structure to desert grassland restoration mediated by a keystone rodent. Biodiversity and Conservation 22:921–935. <a href="documents/cosentino_biodivcon_2013.pdf">PDF</a></p>
 <p>Hager,S.B., <strong>B.J. Cosentino</strong>, K.J. McKay, C. Monson, W. Zuurdeeg, and B. Blevins. 2013. Window area and development drive spatial variation in bird-window collisions in an urban landscape. PLoS One 8(1):e53371. <a href="documents/hager_plosone_2013.pdf">PDF</a></p>
 <p>Bluett, R.D., and <strong>B.J. Cosentino</strong>. 2013. Estimating occupancy of Trachemys scripta and Chrysemys picta with time-lapse cameras and basking rafts: a pilot study in Illinois, USA. Transactions of the Illinois State Academy of Science 106:15–21. <a href="documents/bluett_ias_2013.pdf">PDF</a></p>
 </div>
@@ -584,7 +594,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified December 1, 2019</p>
+<p>Last modified June 7, 2020</p>
 </center>
 </div>
 
