--- a/people.html
+++ b/people.html
@@ -518,12 +518,8 @@ $('.title').remove()
 <div class="row">
 <div class="row">
 <div class="col-lg-7">
-<p><strong>Alessandra Bryan</strong></p>
-<p>Ally worked with Prof. David Droney and me in summer 2017 to study effects of land use history on behavioral variation in red-backed salamanders. She worked with me again in summer 2018 on a project to examine the population genetic structure of plains pocket gophers, then completed an independent study on the same topic. She’s currently working on an honor’s thesis on crypsis in gray squirrels.</p>
-<p><strong>Britta Goncarovs</strong></p>
-<p>Britta started working in the lab in summer 2018 to study effects of land use history on behavioral variation in red-backed salamanders, and she continued as aresearch assistant to help create a model of forest cover change in New England since the early 1970s using Landsat data. In 2019 she was a summer research student in southern New Mexico studying how grassland restoration in the Chihuahuan Desert affects the behavior of banner-tailed kangaroo rats.</p>
-<p><strong>Mark Suchewski</strong></p>
-<p>Mark worked in my lab a summer research assistant and worked in southern New Mexico studying how grassland restoration in the Chihuahuan Desert affects the behavior of banner-tailed kangaroo rats.</p>
+<p><strong>Connor Parrow</strong></p>
+<p>Connor is using camera traps to understand urbanization effects on the abundance and distribution of gray squirrels and other small mammals.</p>
 </div>
 <div class="col-lg-5">
 <p><img src="images/IMG_2550@2x.jpg" width="100%" style="display: block; margin: auto;" /></p>
@@ -531,10 +527,16 @@ $('.title').remove()
 </div>
 <div id="former-students" class="section level3">
 <h3><strong>Former students</strong></h3>
+<p><strong>Alessandra Bryan</strong></p>
+<p>Ally completed an honors thesis in my lab in 2019-20 on how urbanization and forest change affect crypsis of eastern gray squirrels. Ally worked on a couple of different project in my lab prior to her honors thesis, including understanding land use legacy effecds on behavioral variation in red-backed salamanders, and characterizing the population genetic structure of an isolated population of plains pocket gophers.</p>
+<p><strong>Britta Goncarovs</strong></p>
+<p>Britta worked in my lab in summer 2018 to study effects of land use history on behavioral variation in red-backed salamanders, and she continued as aresearch assistant to help create a model of forest cover change in New England since the early 1970s using Landsat data. In 2019 she was a summer research student in southern New Mexico studying how grassland restoration in the Chihuahuan Desert affects the behavior of banner-tailed kangaroo rats.</p>
+<p><strong>Mark Suchewski</strong></p>
+<p>Mark worked in my lab in summer 2019 on a project to understand behavioral responses of banner-tailed kangaroo rats to grassland restoration in the Chihuahuan Desert of southern New Mexico.</p>
 <p><strong>Grace Marshall</strong></p>
-<p>Grace worked with Prof. David Droney and me in summer 2017 to study effects of land use history on behavioral variation in red-backed salamanders. She completed an honors thesis on the relationship between water balance and movement personalities in red-backed salamanders. nts</p>
+<p>Grace worked with Prof. David Droney and me in summer 2017 to study effects of land use history on behavioral variation in red-backed salamanders. She completed an honors thesis on the relationship between water balance and movement personalities in red-backed salamanders. Grace is currently a research technician at the Cornell University Agricultural Experiment Station.</p>
 <p><strong>Penelope Murphy</strong></p>
-<p>Penelope worked with me in summer 2018 in New Mexico to study biodiversity responses to grassland restoration in the Chihuahuan Desert. She completed an honors thesis in ecology at HWS with Prof. Meghan Brown.</p>
+<p>Penelope worked with me in summer 2018 in New Mexico to study biodiversity responses to grassland restoration in the Chihuahuan Desert. Penelope is starting an M.S. degree in wildlife ecology at the University of Wisconsin in fall 2020.</p>
 <p><strong>Banan Otaibi</strong></p>
 <p>Banan examined differences in post-attack antipredator behavior between color morphs of red-backed salamanders in summer 2016 and published a paper on her work in Amphbia-Reptilia. She completed an honors thesis on effects of forest fragmentation on genetic population structure and color polymorphism in red-backed salamanders. Banan is currently in medical school at Penn State.</p>
 <p><strong><a href="https://www.linkedin.com/in/michaelconroy3" target="_blank">Michael Conroy</a></strong></p>
@@ -568,7 +570,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified June 7, 2020</p>
+<p>Last modified July 17, 2020</p>
 </center>
 </div>
 
