--- a/research.html
+++ b/research.html
@@ -512,7 +512,7 @@ $('.title').remove()
 <div id="research-interests" class="section level2">
 <h2><strong>Research interests</strong></h2>
 <hr>
-<p>My research focues on how environmental change affects the ecology and evolution of wildlife species. I’m particularly interested in how habitat loss and fragmentation interacts with other types of environmental change (e.g., climate change) to affect biodiversity. My lab addresses how changing ecological conditions affect population processes, including population dynamics, adaptive evolution, and non-adaptive evolution (e.g., gene flow, genetic drift). I work with a range of organisms in different types of ecosystems, and I use a variety of research methods, including observation and experimentation, field and molecular data, and rigorous statistical analysis. What ties everything together is an interest in learning how human land use and other stressors affect the ecology and evolution of wildlife populations, and ultimately their probability of persisting on the landscape.</p>
+<p>My research focues on how environmental change affects the ecology and evolution of wildlife species. I’m particularly interested in how landscape change interacts with other types of environmental change (e.g., climate change) to affect biodiversity. My lab addresses how changing ecological conditions affect population dynamics, adaptive trait evolution, and non-adaptive evolution (e.g., gene flow, genetic drift). I work with a range of organisms and ecosystems, and I use a variety of research methods, including observation and experimentation, field and molecular data, and rigorous statistical analysis. What ties everything together is an interest in learning how human land use and other stressors affect the ecology and evolution of wildlife populations.</p>
 <p><br></p>
 <div id="current-research-projects" class="section level3">
 <h3><strong>Current research projects</strong></h3>
@@ -521,11 +521,12 @@ $('.title').remove()
 <div class="row">
 <div class="col-lg-7">
 <ul>
-<li>Effects of urbanization on the ecology and evolution of melanism in eastern gray squirrels.</li>
-<li>Biodiversity responses to landscape change and grassland restoration in the Chihuahuan Desert.</li>
-<li>Effects of forest fragmentation and land use history on movement behavior of terrestrial salamanders.</li>
-<li>Effects of habitat loss and fragmentation on the distribution and genetic structure of plains pocket gophers (<em>Geomys bursarius</em>).</li>
-<li>Effects of land use and climate change on amphibians and reptile distributions in New York State.</li>
+<li>Effects of urbanization on the ecology and evolution of melanism in eastern gray squirrels</li>
+<li>Biodiversity responses to landscape change and grassland restoration in the Chihuahuan Desert, NM</li>
+<li>Legacy effects of agriculture on wildlife populations in forest ecosystems</li>
+<li>Drivers of bird-window collisions in cities</li>
+<li>Effects of habitat fragmentation on the distribution and genetic structure of an isolated population of plains pocket gopher (<em>Geomys bursarius</em>) in Illinois</li>
+<li>Citizen science efforts to understand effects of environmental change on amphibian, reptile, and mammal distributions in New York State</li>
 </ul>
 </div>
 <div class="col-lg-5">
@@ -545,7 +546,7 @@ Banner-tailed kangaroo rat (<em>Dipodomys spectabilis</em>) at a grassland resto
 <br>
 <br>
 <br>
-<p>Last modified June 7, 2020</p>
+<p>Last modified July 17, 2020</p>
 </center>
 </div>
 
