--- a/teaching.html
+++ b/teaching.html
@@ -512,8 +512,8 @@ $('.title').remove()
 <div id="teaching" class="section level2">
 <h2><strong>Teaching</strong></h2>
 <hr>
-<div id="current-courses-offered-at-hws" class="section level3">
-<h3><strong>Current courses offered at HWS</strong></h3>
+<div id="courses-taught-at-hws" class="section level3">
+<h3><strong>Courses taught at HWS</strong></h3>
 <div class="container-fluid main-container">
 <div class="row">
 <div class="row">
@@ -524,6 +524,7 @@ $('.title').remove()
 <li>Ecology (BIOL225)</li>
 <li>Conservation Biology (BIOL316)</li>
 <li>Human Nature (BIOL460)</li>
+<li>Biology of the City (BIOL460) - planned for spring 2021</li>
 </ul>
 </div>
 <div class="col-lg-5">
@@ -548,7 +549,7 @@ Sampling a pond for amphibians at Harriet Hollister State Park, NY.
 <br>
 <br>
 <br>
-<p>Last modified June 7, 2020</p>
+<p>Last modified July 17, 2020</p>
 </center>
 </div>
 
