--- a/publications.html
+++ b/publications.html
@@ -514,7 +514,7 @@ $('.title').remove()
 <hr>
 <div id="in-press" class="section level3">
 <h3>In press</h3>
-<p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Continental assessment of species- and life history-related variation and correlates of bird-building collisions in North America. Conservation Biology.</p>
+<p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Correlates of bird collisions with buildings across three North American countries. Conservation Biology.</p>
 <p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere.</p>
 </div>
 <div id="section" class="section level3">
@@ -594,7 +594,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified June 7, 2020</p>
+<p>Last modified July 17, 2020</p>
 </center>
 </div>
 
