--- a/research.html
+++ b/research.html
@@ -512,7 +512,7 @@ $('.title').remove()
 <div id="research-interests" class="section level2">
 <h2><strong>Research interests</strong></h2>
 <hr>
-<p>My research focues on how environmental change affects the ecology and evolution of wildlife species. I’m particularly interested in how landscape change interacts with other types of environmental change (e.g., climate change) to affect biodiversity. My lab addresses how changing ecological conditions affect population dynamics, adaptive trait evolution, and non-adaptive evolution (e.g., gene flow, genetic drift). I work with a range of organisms and ecosystems, and I use a variety of research methods, including observation and experimentation, field and molecular data, and rigorous statistical analysis. What ties everything together is an interest in learning how human land use and other stressors affect the ecology and evolution of wildlife populations.</p>
+<p>My research focues on how environmental change affects the ecology and evolution of wildlife populations. I’m particularly interested in how landscape change interacts with climate change and other stressors to affect wildlife species. My lab addresses how changing ecological conditions affect species distributions, population dynamics, animal movements, and trait evolution. I work with a range of organisms and ecosystems, and I use a variety of research methods, including observation and experimentation, field and molecular data, and rigorous statistical analysis. What ties everything together is an interest in learning how human land use and other stressors affect the ecology and evolution of wildlife populations, and doing science that is useful for wildlife management.</p>
 <p><br></p>
 <div id="current-research-projects" class="section level3">
 <h3><strong>Current research projects</strong></h3>
@@ -526,7 +526,8 @@ $('.title').remove()
 <li>Legacy effects of agriculture on wildlife populations in forest ecosystems</li>
 <li>Drivers of bird-window collisions in cities</li>
 <li>Effects of habitat fragmentation on the distribution and genetic structure of an isolated population of plains pocket gopher (<em>Geomys bursarius</em>) in Illinois</li>
-<li>Citizen science efforts to understand effects of environmental change on amphibian, reptile, and mammal distributions in New York State</li>
+<li>Citizen science efforts to understand effects of landscape and climate change on amphibian, reptile, and mammal distributions in New York State</li>
+<li><a href="https://www.galapagosvitalsigns.org/">Galapagos Vital Signs</a>: a satellite-based monitoring system of climate and other environmental indicators for land and marine zones across the Galapagos Islands.</li>
 </ul>
 </div>
 <div class="col-lg-5">
