--- a/people.html
+++ b/people.html
@@ -20,6 +20,7 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
@@ -549,7 +550,7 @@ $('.title').remove()
 <p>Shay was a summer research student in 2016 and studied the effects of forest fragmentation on behavior of red-backed salamanders. She came back to the lab as a research technician in summer 2017 to work on biodiversity responses to restoration of desert grasslands in New Mexico. Shay is working on an MS in ecology at the University of Illinois.</p>
 <p><strong>Thomas Stephens (Union College)</strong></p>
 <p>Thomas came from Union College in summer 2016 and worked with Katie on personality-dependent movement behavior in red-backed salamanders. He also collected preliminary data on how timber harvest affects color morph frequencies in red-backed salamanders.</p>
-<p><strong><a href="https://www.linkedin.com/in/madeline-balman-phd-student-82b2a082" target="_blank">Lauren Walter</a></strong></p>
+<p><strong><a href="https://www.linkedin.com/in/madeline-balman-phd-student-82b2a082" target="_blank">Maddie Balman</a></strong></p>
 <p>Maddie worked in my lab as a research assistant in summer 2014, helping to sample terrestrial salamanders in the field and take care of animals in the lab. She completed an independent study with me in spring 2015 on how roads affect movement behavior of spotted salamanders. She then worked as a summer research student in 2015 on the effects of forest fragmentation on behavior of red-backed salamanders. Maddie is currently a graduate student in ecology and evolution at Case Western Reserve University.</p>
 <p><strong><a href="https://www.linkedin.com/in/lauren-walter-230483105" target="_blank">Lauren Walter</a></strong></p>
 <p>Lauren started in the lab as a research assistant working lab work for a project on the population genetics of red-backed salamanders. She completed an independent study with me in Fall 2014 on bird-window collisions. Lauren is currently working on a PhD in genomics and bioinformatics at Cornell University.</p>
