--- a/research.html
+++ b/research.html
@@ -20,6 +20,7 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
@@ -512,7 +513,7 @@ $('.title').remove()
 <div id="research-interests" class="section level2">
 <h2><strong>Research interests</strong></h2>
 <hr>
-<p>My research focues on how environmental change affects the ecology and evolution of wildlife populations. I’m particularly interested in how landscape change interacts with climate change and other stressors to affect wildlife species. My lab addresses how changing ecological conditions affect species distributions, population dynamics, animal movements, and trait evolution. I work with a range of organisms and ecosystems, and I use a variety of research methods, including observation and experimentation, field and molecular data, and rigorous statistical analysis. What ties everything together is an interest in learning how human land use and other stressors affect the ecology and evolution of wildlife populations, and doing science that is useful for wildlife management.</p>
+<p>My research focuses on how environmental change affects the ecology and evolution of wildlife populations. I’m particularly interested in how landscape change interacts with climate change and other stressors to affect wildlife species. My lab addresses how changing ecological conditions affect species distributions, population dynamics, animal movements, and trait evolution. I work with a range of organisms and ecosystems, and I use a variety of research methods, including observation and experimentation, field and molecular data, and rigorous statistical analysis. What ties everything together is an interest in learning how human land use and other stressors affect the ecology and evolution of wildlife populations, and doing science that is useful for wildlife management.</p>
 <p><br></p>
 <div id="current-research-projects" class="section level3">
 <h3><strong>Current research projects</strong></h3>
