--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
@@ -512,22 +513,22 @@ $('.title').remove()
 <div class="container-fluid main-container">
 <div class="row">
 <div class="row">
-<div class="col-lg-7">
+<div class="col-lg-6">
 <p><br> <img src="images/index_summer_research.jpg" style="width:100%; border:5px solid; margin-bottom: 0px; margin-left: 50px; margin-right: 0px" align="left"></p>
 </div>
 <div class="col-lg-1">
 
 </div>
-<div class="col-lg-4">
+<div class="col-lg-5">
 <h3 id="bradley-j.-cosentino"><strong>Bradley J. Cosentino</strong></h3>
-<p>Associate Professor<br />
+<p>Associate Professor, Wildlife ecology &amp; evolution<br />
 <a href="https://www2.hws.edu/academics/biology/" target="_blank">Department of Biology</a><br />
 <a href="https://www2.hws.edu/" target="_blank">Hobart &amp; William Smith Colleges</a><br />
-300 Pulteney St.<br />
+300 Pulteney St. <br />
 Geneva, NY 14456</p>
 <p>Office: Eaton 203<br />
 Phone: 315.781.4602<br />
-Email: <a href="mailto:cosentino@hws.edu">cosentino@hws.edu</a></p>
+Email: <a href="mailto:cosentino@hws.edu" class="email">cosentino@hws.edu</a></p>
 </div>
 <div style="height:300px;">
 
