--- a/publications.html
+++ b/publications.html
@@ -513,12 +513,9 @@ $('.title').remove()
 <div id="publications" class="section level2">
 <h2><strong>Publications</strong></h2>
 <hr>
-<div id="in-press" class="section level3">
-<h3>In press</h3>
-<p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere.</p>
-</div>
 <div id="section" class="section level3">
 <h3>2020</h3>
+<p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere 11(9):e03240. <a href="documents/wagnon_ecosphere_2020.pdf">PDF</a></p>
 <p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Correlates of bird collisions with buildings across three North American countries. Conservation Biology. <a href="https://doi.org/10.1111/cobi.13569">https://doi.org/10.1111/cobi.13569,</a> <a href="documents/elmore_consbio_2020.pdf">PDF</a></p>
 </div>
 <div id="section-1" class="section level3">
