--- a/publications.html
+++ b/publications.html
@@ -513,6 +513,10 @@ $('.title').remove()
 <div id="publications" class="section level2">
 <h2><strong>Publications</strong></h2>
 <hr>
+<div id="in-press" class="section level3">
+<h3>In press</h3>
+<p>Brubaker, K.M. and <strong>B.J. Cosentino</strong>. Forest structure and biomass in post-agricultural forests: Lessons learned with new spatial tools. Applied Vegetation Science.</p>
+</div>
 <div id="section" class="section level3">
 <h3>2020</h3>
 <p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere 11(9):e03240. <a href="documents/wagnon_ecosphere_2020.pdf">PDF</a></p>
@@ -578,8 +582,9 @@ $('.title').remove()
 <p>Lowe, W.H., M.A. McPeek, G.E. Likens, and <strong>B.J. Cosentino</strong>. 2008. Linking movement behavior to dispersal and divergence in plethodontid salamanders. Molecular Ecology 17:4459–4469. <a href="documents/lowe_molecol_2008.pdf">PDF</a></p>
 <p>Hager, S.B., and <strong>B.J. Cosentino</strong>. 2006. An identification key to the rodent prey found in owl pellets: employing incisor size to distinguish among genera. American Biology Teacher 68:135–144. <a href="documents/hager_abt_2006.pdf">PDF</a></p>
 <p>Lowe, W.H., G.E. Likens, and <strong>B.J. Cosentino</strong>. 2006. Self-organization in streams: the relationship between movement behavior and body condition in a headwater salamander. Freshwater Biology 51:2052–2062. <a href="documents/lowe_fwbio_2006.pdf">PDF</a></p>
-##<strong>Other publications</strong>
-<hr>
+</div>
+<div id="other-publications" class="section level3">
+<h3>Other publications</h3>
 <p><strong>Cosentino, B.J.</strong> 2018. Examining occupancy and detection probability after three years of monitoring for the Illinois chorus frog (<em>Pseudacris streckeri illinoensis</em>). Illinois Department of Natural Resources, Springfield, Illinois. <a href="documents/cosentino_icf_2018.pdf">PDF</a></p>
 <p><strong>Cosentino, B.J.</strong> 2014. Monitoring plan to detect trends in occupancy of Illinois chorus frogs (<em>Pseudacris streckeri illinoensis</em>). Illinois Department of Natural Resources, Springfield, Illinois. <a href="documents/cosentino_icf_2014.pdf">PDF</a></p>
 <p>Hager, S.B., and <strong>B.J. Cosentino</strong>. 2014. Surveying for bird carcasses resulting from window collisions: a standardized protocol. PeerJ PrePrints 2:e406v1. <a href="documents/hager_peerjpre_2014.pdf">PDF</a></p>
@@ -593,7 +598,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified July 17, 2020</p>
+<p>Last modified November 25, 2020</p>
 </center>
 </div>
 
