--- a/citizensci.html
+++ b/citizensci.html
@@ -525,14 +525,11 @@ $('.title').remove()
 <div id="frontpage" class="container-fluid in">
 <div>
 <div class="row">
-<div class="col-lg-4">
+<div class="col-lg-6">
 <p><a href="http://squirrelmapper.org/" target="_blank"> <img src="images/thumbnail_squirrelmapper.jpg" style="width:100%; border:5px solid black; margin-right: 0px"> </a></p>
 </div>
-<div class="col-lg-4">
+<div class="col-lg-6">
 <p><img src="images/thumbnail_nyherp.jpg" style="width:100%; border:5px solid black; margin-right: 0px"> </a></p>
-</div>
-<div class="col-lg-4">
-<p><img src="images/thumbnail_nymam.jpg" style="width:100%; border:5px solid black; margin-right: 0px"> </a></p>
 </div>
 </div>
 </div>
@@ -546,7 +543,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified November 25, 2020</p>
+<p>Last modified September 2021</p>
 </center>
 </div>
 
