--- a/index.html
+++ b/index.html
@@ -521,7 +521,8 @@ $('.title').remove()
 </div>
 <div class="col-lg-5">
 <h3 id="bradley-j.-cosentino"><strong>Bradley J. Cosentino</strong></h3>
-<p>Associate Professor, Wildlife ecology &amp; evolution<br />
+<h4 id="wildlife-ecology-evolution">Wildlife ecology &amp; evolution</h4>
+<p>Associate Professor &amp; Chair<br />
 <a href="https://www2.hws.edu/academics/biology/" target="_blank">Department of Biology</a><br />
 <a href="https://www2.hws.edu/" target="_blank">Hobart &amp; William Smith Colleges</a><br />
 300 Pulteney St. <br />
@@ -544,7 +545,7 @@ Email: <a href="mailto:cosentino@hws.edu" class="email">cosentino@hws.edu</a></p
 <br>
 <br>
 <br>
-<p>Last modified November 25, 2020</p>
+<p>Last modified September 2021</p>
 </center>
 </div>
 
