--- a/people.html
+++ b/people.html
@@ -519,8 +519,10 @@ $('.title').remove()
 <div class="row">
 <div class="row">
 <div class="col-lg-7">
-<p><strong>Connor Parrow</strong></p>
-<p>Connor is using camera traps to understand urbanization effects on the abundance and distribution of gray squirrels and other small mammals.</p>
+<p><strong>Mark Suchewski</strong></p>
+<p>Mark participated in the 2021 Summer Research Program and is now completing an independent study on the effects of experimental translocation on the behavioral and survival of gray squirrel color morphs. Mark also worked in my lab in summer 2019 on a project to understand behavioral responses of banner-tailed kangaroo rats to grassland restoration in the Chihuahuan Desert of southern New Mexico.</p>
+<p><strong>Regina Hashim</strong></p>
+<p>Regina participated in the 2021 Summer Research Program and helped initiate a new project to test for differences in survival between gray and melanic color morphs of eastern gray squirrels in urban and rural environments.</p>
 </div>
 <div class="col-lg-5">
 <p><img src="images/IMG_2550@2x.jpg" width="100%" style="display: block; margin: auto;" /></p>
@@ -528,12 +530,12 @@ $('.title').remove()
 </div>
 <div id="former-students" class="section level3">
 <h3><strong>Former students</strong></h3>
+<p><strong>Connor Parrow</strong></p>
+<p>Connor worked in my lab during the 2020 Summer Research Program, using camera traps to understand urbanization effects on the abundance and distribution of gray squirrels and other small mammals.</p>
 <p><strong>Alessandra Bryan</strong></p>
 <p>Ally completed an honors thesis in my lab in 2019-20 on how urbanization and forest change affect crypsis of eastern gray squirrels. Ally worked on a couple of different project in my lab prior to her honors thesis, including understanding land use legacy effecds on behavioral variation in red-backed salamanders, and characterizing the population genetic structure of an isolated population of plains pocket gophers.</p>
 <p><strong>Britta Goncarovs</strong></p>
 <p>Britta worked in my lab in summer 2018 to study effects of land use history on behavioral variation in red-backed salamanders, and she continued as aresearch assistant to help create a model of forest cover change in New England since the early 1970s using Landsat data. In 2019 she was a summer research student in southern New Mexico studying how grassland restoration in the Chihuahuan Desert affects the behavior of banner-tailed kangaroo rats.</p>
-<p><strong>Mark Suchewski</strong></p>
-<p>Mark worked in my lab in summer 2019 on a project to understand behavioral responses of banner-tailed kangaroo rats to grassland restoration in the Chihuahuan Desert of southern New Mexico.</p>
 <p><strong>Grace Marshall</strong></p>
 <p>Grace worked with Prof. David Droney and me in summer 2017 to study effects of land use history on behavioral variation in red-backed salamanders. She completed an honors thesis on the relationship between water balance and movement personalities in red-backed salamanders. Grace is currently a research technician at the Cornell University Agricultural Experiment Station.</p>
 <p><strong>Penelope Murphy</strong></p>
@@ -571,7 +573,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified November 25, 2020</p>
+<p>Last modified September 2021</p>
 </center>
 </div>
 
