--- a/publications.html
+++ b/publications.html
@@ -513,16 +513,16 @@ $('.title').remove()
 <div id="publications" class="section level2">
 <h2><strong>Publications</strong></h2>
 <hr>
-<div id="in-press" class="section level3">
-<h3>In press</h3>
-<p>Brubaker, K.M. and <strong>B.J. Cosentino</strong>. Forest structure and biomass in post-agricultural forests: Lessons learned with new spatial tools. Applied Vegetation Science.</p>
-</div>
 <div id="section" class="section level3">
-<h3>2020</h3>
-<p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere 11(9):e03240. <a href="documents/wagnon_ecosphere_2020.pdf">PDF</a></p>
-<p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Correlates of bird collisions with buildings across three North American countries. Conservation Biology. <a href="https://doi.org/10.1111/cobi.13569">https://doi.org/10.1111/cobi.13569,</a> <a href="documents/elmore_consbio_2020.pdf">PDF</a></p>
+<h3>2021</h3>
+<p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Correlates of bird collisions with buildings across three North American countries. Conservation Biology 35:654-665. <a href="documents/elmore_consbio_2020.pdf">PDF</a></p>
+<p>Brubaker, K.M. and <strong>B.J. Cosentino</strong>. Forest structure and biomass in post-agricultural forests: Lessons learned with new spatial tools. Applied Vegetation Science 24:e12552. <a href="documents/brubaker_appvegsci_2021.pdf">PDF</a></p>
 </div>
 <div id="section-1" class="section level3">
+<h3>2020</h3>
+<p>Wagnon, C.J., R.L. Schooley, and <strong>B.J. Cosentino</strong>. Shrub encroachment creates a dynamic landscape of fear for desert lagomorphs via multiple pathways. Ecosphere 11(9):e03240. <a href="documents/wagnon_ecosphere_2020.pdf">PDF</a></p>
+</div>
+<div id="section-2" class="section level3">
 <h3>2019</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, H. Campos, and L.M. Burkett. 2019. Does habitat disturbance promote geogrpahical parthenogenesis in whiptail lizards? Evolutionary Ecology 33:839–853. <a href="documents/cosentino_evec_2019.pdf">PDF</a></p>
 <p>Bowne, D.R., <strong>B.J. Cosentino</strong>, L.J. Anderson, et al. 2019. A broader approach to understanding urbanization effects on freshwater turtles: Reply to Lambert and Steen 2019. Conservation Biology 33:1197-1199. <a href="documents/bowne_consbio_2019.pdf">PDF</a></p>
@@ -530,47 +530,47 @@ $('.title').remove()
 <p>Marsh, D.M. and <strong>B.J. Cosentino</strong>. 2019. Causes and consequences of non-random drop-outs for citizen science projects: lessons from the North American amphibian monitoring program. Freshwater Science 38:292-302. <a href="documents/marsh_fws_2019.pdf">PDF</a></p>
 <p>Kenyon, K.L., <strong>B.J. Cosentino</strong>, A.J. Gottesman, M.E. Onorato, J. Hoque, and S.G. Hoskins. 2019. From CREATE workshop to course implementation: examining downstream impacts on teaching practices and student learning at 4-year institutions. BioScience 69:47-58. <a href="documents/kenyon_bioscience_2019.pdf">PDF</a></p>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2018</h3>
 <p><strong>Cosentino, B.J.</strong> and K.M. Brubaker. 2018. Effects of land use legacies and habitat fragmentation on salamander abundance. Landscape Ecology 33:1573-1584. <a href="documents/cosentino_landecol_2018.pdf">PDF</a></p>
 <p>Bowne, D., <strong>B.J. Cosentino</strong>, L.J. Anderson, et al. 2018. Effects of urbanization on the population structure of freshwater turtles across the United States. Conservation Biology 32:1150-1161. <a href="documents/bowne_consbio_2018.pdf">PDF</a></p>
 <p><strong>Cosentino, B.J.</strong>, and R.L. Schooley. Dispersal and wetland fragmentation. 2018. In: Finlayson, C., et al., editors. The Wetland Book. Springer, Dordrecth. <a href="documents/cosentino_wetland_2018.pdf">PDF</a></p>
 <p>Schooley, R.L., and <strong>B.J. Cosentino</strong>. 2018. Metapopulation dynamics of wetland species. In: Finlayson, C., et al., editors. The Wetland Book. Springer, Dordrecth. <a href="documents/schooley_wetland_2018.pdf">PDF</a></p>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2017</h3>
 <p><strong>Cosentino, B.J.</strong>, J.D. Moore, N.E. Karraker, M. Ouellet, and J.P. Gibbs. 2017. Evolutionary response to global change: climate and land use interact to shape color polymorphism in a woodland salamander. Ecology and Evolution 7:5426-5434. <a href="documents/cosentino_evec_2017.pdf">PDF</a></p>
 <p>Hager, S.B., <strong>B.J. Cosentino</strong>, M.A. Aguilar-Gómez, M. L. Anderson, M. Bakermans, et al. 2017. Continent-wide analysis of how urbanization affects bird-window collision mortality in North America. Biological Conservation 212:209-215. <a href="documents/hager_biolcons_2017.pdf">PDF</a></p>
 <p>Otaibi, B., Q. Johnson, and <strong>B.J. Cosentino. 2017</strong>. Postautotomy tail movement differs between colour morphs of the red-backed salamander (Plethodon cinereus). Amphibia-Reptilia 38:395-399. <a href="documents/otaibi_amre_2017.pdf">PDF</a></p>
 <p>Marsh, D.M., <strong>B.J. Cosentino</strong>, K.S. Jones, et al. 2017. Effects of roads and land use on frog distributions across spatial scales and regions in the eastern and central United States. Diversity and Distributions 23:158-170. <a href="documents/marsh_divdist_2017.pdf">PDF</a></p>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2016</h3>
 <p><strong>Cosentino, B.J.</strong>, and D.C. Droney. 2016. Movement behaviour of woodland salamanders is repeatable and varies with forest age in a fragmented landscape. Animal Behaviour 121:137-146. <a href="documents/cosentino_anbeh_2016.pdf">PDF</a></p>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2015</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, A.J. McCarthy, and K. Sierzega. 2015. Rapid genetic restoration of a keystone species exhibiting delayed demographic response. Molecular Ecology. 24:6120–6133. <a href="documents/cosentino_molecol_2015.pdf">PDF</a></p>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2014</h3>
 <p><strong>Cosentino, B.J.</strong>, D.M. Marsh, K.S. Jones, et al. 2014. Citizen science reveals widespread negative effects of roads on amphibian distributions. Biological Conservation 180:31–38. <a href="documents/cosentino_biolcons_2014.pdf">PDF</a></p>
 <p>McAllister, M.M., R.L. Schooley, B.T. Bestelmeyer, J.M. Coffman, and <strong>B.J. Cosentino</strong>. 2014. Effects of grassland restoration efforts on mound-building ants in the Chihuahuan Desert. Journal of Arid Environments 111:79–83. <a href="documents/mcallister_arid_2014.pdf">PDF</a></p>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, J.F. Kelly, and J.M. Coffman. 2014. Constraints and time lags for recovery of a keystone species (Dipodomys spectabilis) after landscape restoration. Landscape Ecology 29:665–675. <a href="documents/cosentino_landecol_2014.pdf">PDF</a></p>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2013</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, B.T. Bestelmeyer, and J.M. Coffman. 2013. Response of lizard community structure to desert grassland restoration mediated by a keystone rodent. Biodiversity and Conservation 22:921–935. <a href="documents/cosentino_biodivcon_2013.pdf">PDF</a></p>
 <p>Hager,S.B., <strong>B.J. Cosentino</strong>, K.J. McKay, C. Monson, W. Zuurdeeg, and B. Blevins. 2013. Window area and development drive spatial variation in bird-window collisions in an urban landscape. PLoS One 8(1):e53371. <a href="documents/hager_plosone_2013.pdf">PDF</a></p>
 <p>Bluett, R.D., and <strong>B.J. Cosentino</strong>. 2013. Estimating occupancy of Trachemys scripta and Chrysemys picta with time-lapse cameras and basking rafts: a pilot study in Illinois, USA. Transactions of the Illinois State Academy of Science 106:15–21. <a href="documents/bluett_ias_2013.pdf">PDF</a></p>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2012</h3>
 <p><strong>Cosentino, B.J.</strong>, C.A. Phillips, R.L. Schooley, W.H. Lowe, and M.R. Douglas. 2012. Linking extinction-colonization dynamics to genetic structure in a salamander metapopulation. Proceedings of the Royal Society B 279:1575–1582. <a href="documents/cosentino_procb_2012.pdf">PDF</a></p>
 <p>Hager, S.B., <strong>B.J. Cosentino</strong>, and K.J. McKay. 2012. Scavenging affects persistence of avian carcasses resulting from window collisions in an urban landscape. Journal of Field Ornithology 83:203–211. <a href="documents/hager_jfo_2012.pdf">PDF</a></p>
 <p>Lowe, W.H., M.A. McPeek, G.E. Likens, and <strong>B.J. Cosentino</strong>. 2012. Decoupling of genetic and phenotypic divergence in a headwater landscape. Molecular Ecology 21:2399–2409. <a href="documents/lowe_molecol_2012.pdf">PDF</a></p>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2011</h3>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, and C.A. Phillips. 2011. Spatial connectivity moderates the effect of predatory fish on salamander metapopulation dynamics. Ecosphere 2(8):art95. <a href="documents/cosentino_ecosphere_2011.pdf">PDF</a></p>
 <p><strong>Cosentino, B.J.</strong>, R.L. Schooley, and C.A. Phillips. 2011. Connectivity of agroecosystems: dispersal costs can vary among crops. Landscape Ecology 26:371–379. <a href="documents/cosentino_landecol_2011.pdf">PDF</a></p>
@@ -598,7 +598,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified November 25, 2020</p>
+<p>Last modified September 2021</p>
 </center>
 </div>
 
