--- a/research.html
+++ b/research.html
@@ -523,12 +523,10 @@ $('.title').remove()
 <div class="col-lg-7">
 <ul>
 <li><a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2018249&amp;HistoricalAwards=false">Effects of urbanization on the ecology and evolution of melanism in eastern gray squirrels</a></li>
-<li>Biodiversity responses to landscape change and grassland restoration in the Chihuahuan Desert, NM</li>
+<li>Biodiversity responses to landscape change and grassland restoration in the Chihuahuan Desert, New Mexico</li>
 <li>Legacy effects of agriculture on wildlife populations in forest ecosystems</li>
-<li>Drivers of bird-window collisions in cities</li>
 <li>Effects of habitat fragmentation on the distribution and genetic structure of an isolated population of plains pocket gopher (<em>Geomys bursarius</em>) in Illinois</li>
-<li>Citizen science efforts to understand effects of landscape and climate change on amphibian, reptile, and mammal distributions in New York State</li>
-<li><a href="https://www.galapagosvitalsigns.org/">Galapagos Vital Signs</a>: a satellite-based monitoring system of climate and other environmental indicators for land and marine zones across the Galapagos Islands.</li>
+<li>Designing a long-term monitoring program for the threatened Illinois chorus frog</li>
 </ul>
 </div>
 <div class="col-lg-5">
@@ -548,7 +546,7 @@ Banner-tailed kangaroo rat (<em>Dipodomys spectabilis</em>) at a grassland resto
 <br>
 <br>
 <br>
-<p>Last modified November 25, 2020</p>
+<p>Last modified September 2021</p>
 </center>
 </div>
 
