--- a/teaching.html
+++ b/teaching.html
@@ -523,9 +523,10 @@ $('.title').remove()
 <li>Biostatistics (BIOL212)</li>
 <li>Evolutionary Genetics (BIOL215)</li>
 <li>Ecology (BIOL225)</li>
+<li>Wildlife Ecology &amp; Management (BIOL315)</li>
 <li>Conservation Biology (BIOL316)</li>
 <li>Human Nature (BIOL460)</li>
-<li>Biology of the City (BIOL460) - planned for spring 2021</li>
+<li>Biology of the City (BIOL460)</li>
 </ul>
 </div>
 <div class="col-lg-5">
@@ -550,7 +551,7 @@ Sampling a pond for amphibians at Harriet Hollister State Park, NY.
 <br>
 <br>
 <br>
-<p>Last modified November 25, 2020</p>
+<p>Last modified September 2021</p>
 </center>
 </div>
 
