--- a/citizensci.html
+++ b/citizensci.html
@@ -529,7 +529,7 @@ $('.title').remove()
 <p><a href="http://squirrelmapper.org/" target="_blank"> <img src="images/thumbnail_squirrelmapper.jpg" style="width:100%; border:5px solid black; margin-right: 0px"> </a></p>
 </div>
 <div class="col-lg-6">
-<p><img src="images/thumbnail_nyherp.jpg" style="width:100%; border:5px solid black; margin-right: 0px"> </a></p>
+<p><a href="https://www.nyherps.org/" target="_blank"> <img src="images/thumbnail_nyherp.jpg" style="width:100%; border:5px solid black; margin-right: 0px"> </a></p>
 </div>
 </div>
 </div>
