--- a/publications.html
+++ b/publications.html
@@ -513,6 +513,10 @@ $('.title').remove()
 <div id="publications" class="section level2">
 <h2><strong>Publications</strong></h2>
 <hr>
+<div id="preprints-in-review" class="section level3">
+<h3>Preprints / In review</h3>
+<p><strong>Cosentino, B.J.</strong> and J.P. Gibbs. Parallel evolution of urban-rural clines in melanism in a widespread mammal. bioRxiv. <a href="https://doi.org/10.1101/2021.09.08.459478">doi: https://doi.org/10.1101/2021.09.08.459478</a></p>
+</div>
 <div id="section" class="section level3">
 <h3>2021</h3>
 <p>Elmore, J.A., S.B. Hager, <strong>B.J. Cosentino</strong>, et al. Correlates of bird collisions with buildings across three North American countries. Conservation Biology 35:654-665. <a href="documents/elmore_consbio_2020.pdf">PDF</a></p>
@@ -598,7 +602,7 @@ $('.title').remove()
 <br>
 <br>
 <br>
-<p>Last modified September 2021</p>
+<p>Last modified December 2021</p>
 </center>
 </div>
 
