--- a/publications.html
+++ b/publications.html
@@ -513,9 +513,9 @@ $('.title').remove()
 <div id="publications" class="section level2">
 <h2><strong>Publications</strong></h2>
 <hr>
-<div id="preprints-in-review" class="section level3">
-<h3>Preprints / In review</h3>
-<p><strong>Cosentino, B.J.</strong> and J.P. Gibbs. Parallel evolution of urban-rural clines in melanism in a widespread mammal. bioRxiv. <a href="https://doi.org/10.1101/2021.09.08.459478">doi: https://doi.org/10.1101/2021.09.08.459478</a></p>
+<div id="in-press" class="section level3">
+<h3>In press</h3>
+<p><strong>Cosentino, B.J.</strong> and J.P. Gibbs. Scientific Reports. Parallel evolution of urban-rural clines in melanism in a widespread mammal. <a href="https://doi.org/10.1101/2021.09.08.459478">bioRxiv Preprint</a></p>
 </div>
 <div id="section" class="section level3">
 <h3>2021</h3>
